# Neuroverse3D

./: Demo.ipynb  Inference.py  LICENSE  README.md  config.py  dataloader.py  pyproject.toml  train.py
neuroverse3D/: intro.md  lightning_model.py
neuroverse3D/.ipynb_checkpoints/: lightning_model-checkpoint.py
neuroverse3D/models/.ipynb_checkpoints/: neuroverse3D-checkpoint.py  unet_baseline_model-checkpoint.py
neuroverse3D/models/nn/: layers.py
neuroverse3D/models/nn/.ipynb_checkpoints/: layers-checkpoint.py
utils/: dataloading.py  imagefilter.py  losses.py  misc.py  pairwise_measures.py  task_synthesis.py  utils_MetricReloaded.py
